# itmo_eda_task

./: .gitignore  ENV  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  eda.instuctions.md
